name:                inline-c-exceptions
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/chpatrick/inline-c-exceptions
license:             MIT
license-file:        LICENSE
author:              Patrick Chilton
maintainer:          chpatrick@gmail.com
copyright:           2017 Patrick Chilton
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.C.Inline.Cpp.Exceptions
  build-depends:       base >= 4.7 && < 5,
                       template-haskell,
                       inline-c,
                       safe-exceptions
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite test
  type:                exitcode-stdio-1.0
  main-is:             test/Test.hs
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <5,
                       inline-c-exceptions,
                       inline-c,
                       inline-c-cpp,
                       HUnit,
                       safe-exceptions
  ghc-options:         -Wall
  c-sources:           test/Test.cpp
  extra-libraries:     stdc++